crates/pardosa-genome/tests/compile_fail/tuple_usize.stderr
error: GenomeSafe: usize has platform-dependent size. Use u32/u64/i32/i64 for portable serialization.
 --> tests/compile_fail/tuple_usize.rs:5:12
  |
5 |     pair: (usize, u32),
  |            ^^^^^
